<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.DireccionFragment" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/direcci_n"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPais"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/pais"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etCiudad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/ciudad"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/etEstado"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etEstado"
        app:layout_constraintTop_toBottomOf="@+id/etEstado"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etEstado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/estado"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/etPais"
        app:layout_constraintStart_toStartOf="@+id/etPais"
        app:layout_constraintTop_toBottomOf="@+id/etPais"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etColonia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/colonia"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="@+id/etCiudad"
        app:layout_constraintStart_toStartOf="@+id/etCiudad"
        app:layout_constraintTop_toBottomOf="@+id/etCiudad"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etCalle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/calle_1"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/etColonia"
        app:layout_constraintStart_toStartOf="@+id/etColonia"
        app:layout_constraintTop_toBottomOf="@+id/etColonia"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etCalle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/calle_2"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/etCalle1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etCalle1"
        app:layout_constraintTop_toBottomOf="@+id/etCalle1"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etCodigo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/codigo_postal"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/etCalle2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etCalle2"
        app:layout_constraintTop_toBottomOf="@+id/etCalle2"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etNumc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/numero_de_casa"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/etCodigo"
        app:layout_constraintStart_toStartOf="@+id/etCodigo"
        app:layout_constraintTop_toBottomOf="@+id/etCodigo"
        android:autofillHints="" />

    <ImageButton
        android:id="@+id/btnGps"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/todo5"
        android:src="@android:drawable/ic_menu_mylocation"
        app:layout_constraintEnd_toStartOf="@+id/btnListo"
        app:layout_constraintStart_toEndOf="@+id/btnVolver"
        app:layout_constraintTop_toBottomOf="@+id/etNumc"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/volver"
        app:layout_constraintStart_toStartOf="@+id/etNumc"
        app:layout_constraintTop_toBottomOf="@+id/etNumc" />

    <Button
        android:id="@+id/btnListo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/listo"
        app:layout_constraintEnd_toEndOf="@+id/etNumc"
        app:layout_constraintTop_toBottomOf="@+id/etNumc"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>