<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.TarjetaFragment" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/tarjeta"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNT"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/n_mero_de_tarjeta"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/etExpiracion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/fecha_de_expiraci_n"
        android:inputType="datetime"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/etNT"
        app:layout_constraintStart_toStartOf="@+id/etNT"
        app:layout_constraintTop_toBottomOf="@+id/etNT"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etClave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/c_digo"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/etExpiracion"
        app:layout_constraintStart_toStartOf="@+id/etExpiracion"
        app:layout_constraintTop_toBottomOf="@+id/etExpiracion"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnRegre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/volver2"
        app:layout_constraintStart_toStartOf="@+id/etClave"
        app:layout_constraintTop_toBottomOf="@+id/etClave" />

    <Button
        android:id="@+id/btnList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/listo2"
        app:layout_constraintEnd_toEndOf="@+id/etClave"
        app:layout_constraintTop_toBottomOf="@+id/etClave" />
</androidx.constraintlayout.widget.ConstraintLayout>