<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ProductoFragment">

    <ImageView
        android:id="@+id/ivCal"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/todo4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/megusta"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/ivFoto"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="@string/todo"
        android:src="@android:drawable/dialog_frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/alert_dark_frame"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/textview"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/ivFoto"
        app:layout_constraintTop_toBottomOf="@+id/ivFoto" />

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:text="@string/textview2"
        app:layout_constraintStart_toStartOf="@+id/tvTitulo"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />

    <RatingBar
        android:id="@+id/rbCal"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:numStars="5"
        app:layout_constraintStart_toEndOf="@+id/tvTitulo"
        app:layout_constraintTop_toTopOf="@+id/tvTitulo" />

    <Spinner
        android:id="@+id/spTallas"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:entries="@array/tallas"
        app:layout_constraintEnd_toEndOf="@+id/tvDescripcion"
        app:layout_constraintStart_toStartOf="@+id/tvDescripcion"
        app:layout_constraintTop_toBottomOf="@+id/tvDescripcion" />

    <TextView
        android:id="@+id/tvPre"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/_0_01"
        android:textColor="#0277BD"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/spTallas"
        app:layout_constraintStart_toStartOf="@+id/spTallas"
        app:layout_constraintTop_toBottomOf="@+id/spTallas" />

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/agregar"
        app:layout_constraintEnd_toEndOf="@+id/tvPre"
        app:layout_constraintStart_toStartOf="@+id/tvPre"
        app:layout_constraintTop_toBottomOf="@+id/tvPre" />

</androidx.constraintlayout.widget.ConstraintLayout>