<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegDatosFragment">

    <TextView
        android:id="@+id/titlelPD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/personal_data"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/etRFirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etRFirstName"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/first_name"
        android:hint="@string/first_name"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etRLastName"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/last_name"
        android:hint="@string/last_name"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRFirstName" />

    <Button
        android:id="@+id/btnNext2"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:enabled="true"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spTallas" />

    <TextView
        android:id="@+id/tvHave2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/i_already_have_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNext2" />

    <Spinner
        android:id="@+id/spTallas"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:entries="@array/opciones"
        app:layout_constraintEnd_toEndOf="@+id/etRLastName"
        app:layout_constraintStart_toStartOf="@+id/etRLastName"
        app:layout_constraintTop_toBottomOf="@+id/etRLastName" />

</androidx.constraintlayout.widget.ConstraintLayout>